Try to get test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 3.10.0)
 
-project(webrtc-native-build CXX)
+project(webrtc-native-build NONE)
+# project(webrtc-native-build CXX)
 
+# set (CMAKE_CXX_STANDARD 17)
+
+# add_compile_options(
+#     -D_GLIBCXX_USE_CXX11_ABI=0
+# )
 
 # Verify build architecture
 if (CMAKE_BUILD_ARCHITECTURE MATCHES arm64)
@@ -121,15 +127,15 @@ elseif (UNIX)
 endif (WIN32)
 
 
-add_executable(webrtc_demo src/video_loopback_main.cc src/video_loopback.cc)
-include_directories(
-    3rdParty/webrtc_native/webrtc/src
-    3rdParty/webrtc_native/webrtc/src/third_party/abseil-cpp
-    3rdParty/webrtc_native/webrtc/src/third_party/libyuv/include
-    3rdParty/webrtc_native/webrtc/src/third_party/googletest/custom
-    3rdParty/webrtc_native/webrtc/src/third_party/googletest/src/googlemock/include
-    3rdParty/webrtc_native/webrtc/src/third_party/googletest/src/googletest/include
-    )
+# add_executable(webrtc_demo src/video_loopback_main.cc src/video_loopback.cc)
+# include_directories(
+#     3rdParty/webrtc_native/webrtc/src
+#     3rdParty/webrtc_native/webrtc/src/third_party/abseil-cpp
+#     3rdParty/webrtc_native/webrtc/src/third_party/libyuv/include
+#     3rdParty/webrtc_native/webrtc/src/third_party/googletest/custom
+#     3rdParty/webrtc_native/webrtc/src/third_party/googletest/src/googlemock/include
+#     3rdParty/webrtc_native/webrtc/src/third_party/googletest/src/googletest/include
+#     )
 
 
 #     include_directories(
@@ -143,11 +149,15 @@ include_directories(
 # )
 
 
-set_target_properties(webrtc_demo PROPERTIES LINKER_LANGUAGE CXX)
+# set_target_properties(webrtc_demo PROPERTIES LINKER_LANGUAGE CXX)
 
-add_subdirectory(3rdParty)
+# add_subdirectory(3rdParty)
 
-target_link_libraries(
-    webrtc_demo 
-    ${CMAKE_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/libwebrtc.a
-    )
+# target_link_libraries(
+#     webrtc_demo 
+#     ${CMAKE_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/libwebrtc.a
+#     ${CMAKE_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/rtc_base/librtc_base.a
+#     ${CMAKE_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/rtc_base/librtc_event.a
+#     # ${CMAKE_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/video_analyzer.o
+#     # ${CMAKE_SOURCE_DIR}/3rdParty/webrtc_native/webrtc/src/out/Debug/obj/video_quality_test.o
+#     )
